--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-envlist=py35
+envlist=py36
 
 [testenv]
 deps=pytest
 changedir=tests
-commands=pytest --basetemp={envtmpdir} {posargs}
+commands=pytest --junitxml=junit-{envname}.xml --basetemp={envtmpdir} {posargs}
