Adding front end code

--- a/system_configuration/etc/apache2/sites-available/botgok-bnjmn.conf
+++ b/system_configuration/etc/apache2/sites-available/botgok-bnjmn.conf
@@ -24,4 +24,6 @@
     <Directory /var/botgok-deployment/virtualenv>
         Require all granted
     </Directory>
+
+    SetEnv BOT_SERVER_CONFIG_FILE "/var/botgok-deployment/config_server.json"
 </VirtualHost>
