Force config file arg for alembic

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = %(here)s/src/game_bot/server/database/alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://testuser:testpassword@localhost:5432/game_bot
+sqlalchemy.url =
 
 
 # Logging configuration
