--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "history": "^4.7.2",
     "jest": "^21.2.1",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
+    "redux-saga": "^0.16.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.1"
   }
