--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.7",
     "history": "^4.7.2",
     "jest": "^21.2.1",
@@ -39,6 +40,7 @@
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "style-loader": "^0.19.0",
-    "webpack": "^3.7.1"
+    "webpack": "^3.7.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
