--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "style-loader": "^0.19.0",
+    "universal-cookie": "^2.1.0",
     "webpack": "^3.7.1",
     "whatwg-fetch": "^2.0.3"
   }
