--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-transition": "^1.1.1",
     "redux": "^3.7.2",
     "redux-saga": "^0.16.0",
     "style-loader": "^0.19.0",
